Add `Dockerfile` for containerized deployment; enhance `MasterGuildSetup` with JS-flow parity, dynamic role/category creation, and dropdown refresh; improve interaction handling across components; optimize setup wizard for persistence and feedback.